# vats5

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  biome.json  flake.nix
.buildkite/: pipeline.yaml
.circleci/: config.yml
client/: package-lock.json  package.json  vite.config.js
client/src/: App.jsx  App.tsx
server/: .clang-format  .clangd  .gitignore  CMakeLists.txt  FILTERED_DATA.md  README.md  main.cpp  make-build  make-problems
server/cmake/: patch-rapidcheck.cmake
server/configs/required_stops/: bart.toml  vtalr.toml
server/configs/world/: RG_20250718_BA.toml  RG_20250718_BA_CT_SC.toml  RG_20250718_CT.toml  RG_20260108_all.toml  RG_20260109_BA_CT_SC_SM_AC.toml
server/data_configs/: RG_20250718_BA.toml  RG_20250718_BA_CT_SC.toml  RG_20250718_CT.toml  RG_20260108_all.toml  RG_20260109_BA_CT_SC_SM_AC.toml
server/sql/: generate_schema_header.cmake  viz_schema.sql  viz_schema.sql.h.in
server/src/: log.h
server/src/algorithm/: union_find.cpp  union_find.h
server/src/gtfs/: gtfs.cpp  gtfs.h  gtfs_filter.cpp  gtfs_filter.h  gtfs_filter_test.cpp  gtfs_test.cpp
server/src/serialization/: optional.h
server/src/solver/: branch_and_bound.cpp  branch_and_bound.h  branch_and_bound2.cpp  branch_and_bound2.h  branch_and_bound2_test.cpp  branch_and_bound_solver.cpp  branch_and_bound_solver.h  branch_and_bound_solver_test.cpp  branch_and_bound_test.cpp  cached_test_data.h  concorde.cpp  concorde.h  concorde_test.cpp  data.cpp  data.h  data_test.cpp  debug_printing.cpp  debug_printing.h  graph_util.cpp  graph_util.h  graph_util_test.cpp  path_massage.cpp  path_massage.h  path_massage_test.cpp  relaxed_adjacency_list.cpp  relaxed_adjacency_list.h  relaxed_adjacency_list_test.cpp  relaxed_shortest_path.cpp  relaxed_shortest_path.h  relaxed_shortest_path_test.cpp  search_event.h  shortest_path.cpp  shortest_path.h  shortest_path_test.cpp  step_merge.cpp  step_merge.h  step_merge_test.cpp  steps_adjacency_list.cpp  steps_adjacency_list.h  steps_adjacency_list_test.cpp  (+11 more)
server/src/solver/test_util/: cached_test_data.h  naive_solve.cpp  naive_solve.h  problem_state_gen.cpp  problem_state_gen.h
server/src/tools/: approach3.cpp  approach4.cpp  benchmark_bnb.cpp  benchmark_reduction.cpp  branch_and_bound_dev.cpp  branch_and_bound_tool.cpp  gtfs_filter_tool.cpp  gtfs_query.cpp  initialize_problem_state.cpp  iterative_expansion.cpp  load_problem_state.cpp  plain_viz.cpp  reduction_diff.cpp  reduction_output.h  save_problem_state.cpp  subpath_print.cpp  visualization_tool.cpp
server/src/util/: date.cpp  date.h  date_test.cpp
server/src/visualization/: sqlite_wrapper.cpp  sqlite_wrapper.h  visualization.cpp  visualization.h  visualization_test.cpp
server/src/visualization2/: visualization2.cpp  visualization2.h  visualization2_test.cpp
visualization/: .gitignore  README.md  index.html  package-lock.json  package.json  ports.ts  server.ts  vite.config.ts
visualization/src/: env.d.ts  favicon.ts  index.css  main.tsx
visualization/src/client/: App.tsx  trpc.ts
visualization/src/routes/: __root.tsx  index.tsx  styleguide.tsx
visualization/src/routes/viz/: $name.tsx
visualization/src/server/: db.ts  schemas.ts  trpc.ts
